# geospatial-video

./: .gitignore  .pyre_configuration  README.md  pyproject.toml
.github/workflows/: clean-up-and-format.yml  test-and-check.yml
.pyre/: pyre.stderr
data/: df_frames.pickle
examples/: example.py  examples.py
geospatialvideo/: __init__.py  annotation.py  frame.py  instance.py  scratch.py  video.py
geospatialvideo/collection/: __init__.py  annotation.py  annotations.py  frame.py  frames.py  instance.py  instances.py  joined_instance.py  joined_instances.py  video.py  videos.py
geospatialvideo/utils/: __init__.py
geospatialvideo/utils/F/: __init__.py  accelerating.py  decelerating.py  dist.py  move_away.py  moving.py  stopped.py  stopping.py
notebooks/: prepare-data.ipynb
scripts/: commit-and-push.sh
