[tool.poetry]
name = "geospatial-video"
version = "0.1.0"
description = "A tool for video-geospatial data exploration"
authors = ["Chanwut (Mick) Kittivorawong <chanwutk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
autoflake8 = "^0.3.2"
flake8 = "^4.0.1"
isort = "^5.10.1"
autopep8 = "^1.6.0"
pyright = "^1.1.235"
jupyterlab = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
